force-app/main/default/objects/Insurance_Company__c/Insurance_Company__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Insurance Company.</description>
    <label>Insurance Company</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>