force-app/main/default/objects/Insurance_Company__c/fields/Claim_API_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Claim_API_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim API Enabled</label>
    <type>Checkbox</type>
</CustomField>