force-app/main/default/objects/Insurance_Company__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Government Scheme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>