force-app/main/default/objects/Insurance_Company__c/fields/Standard_Discount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Discount__c</fullName>
    <label>Standard Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>