force-app/main/default/objects/Insurance_Company__c/fields/Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone__c</fullName>
    <label>Support Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>